// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Avatar renders empty div when no props 1`] = `
<div
  className="bg-gray-1 rounded-circ overflow-hidden av-sz-lg mr-1"
>
  
</div>
`;

exports[`components/Avatar renders group image tag when hash prop provided 1`] = `
<div
  className="bg-gray-1 rounded-circ overflow-hidden av-sz-lg mr-1"
>
  <img
    alt="User or Group Avatar"
    height="60"
    src="https://consensus.nyc3.digitaloceanspaces.com/groups/notARealHash"
    width="60"
  />
</div>
`;

exports[`components/Avatar renders user image tag when hash prop provided 1`] = `
<div
  className="bg-gray-1 rounded-circ overflow-hidden av-sz-lg mr-1"
>
  <img
    alt="User or Group Avatar"
    height="60"
    src="https://consensus.nyc3.digitaloceanspaces.com/users/notARealHash"
    width="60"
  />
</div>
`;
